fixed video align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,7 +31,6 @@ img {
 }
 
 #reel h2{
-  text-align: center;
   font-family: "Abril Fatface", cursive;
   font-size: 3em;
 }
